--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,11 @@ dependencies:
   google_place:
   flutter_dotenv: ^5.0.2
   geocoding: ^3.0.0
+  cloud_firestore: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.3.2
   path_provider:
   path: ^1.8.3
 
