--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MAPS_API_KEY = AIzaSyD97KYympDAv48r11X0aQV6appwXRhBK4I
 PLACES_API_KEY = AIzaSyB6jRem02qkxSvl-cEsCy4F7reqCMxOwRM
+FIREBASE_OP_API_KEY = AIzaSyCp0L6rfbc_3yMbd8mJlk4JBrpZAw8QzZg
