--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   path_provider:
   path: ^1.8.3
+  animated_notch_bottom_bar: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -95,6 +96,7 @@ flutter:
       fonts:  
         - asset: fonts/Montserrat-Italic-VariableFont_wght.ttf
         - asset: fonts/Montserrat-VariableFont_wght.ttf
+        - asset: fonts/Montserrat-Bold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
