--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   geocoding: ^3.0.0
   cloud_firestore: ^4.0.0
+  url_launcher:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,6 +51,8 @@ dependencies:
   path_provider:
   path: ^1.8.3
   animated_notch_bottom_bar: ^1.0.2
+  provider: ^6.1.2
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   flutter_test:
